cleaned up table styles to share more styling between student list and content view. fixes header alignment issue in detail view.

--- a/apps/src/templates/sectionProgress/progressTables/progressTableStyles.scss
+++ b/apps/src/templates/sectionProgress/progressTables/progressTableStyles.scss
@@ -8,11 +8,13 @@ $content-view-width: $content-width - $student-list-width;
 
 .progress-table {
   table {
+    table-layout: fixed;
     border: 1px solid;
     border-color: $border-gray;
   }
   th {
     background-color: $table-header;
+    color: $charcoal;
     border-width: 0px 1px 2px 0px;
     border-color: $border-gray;
     height: inherit;
@@ -21,45 +23,35 @@ $content-view-width: $content-width - $student-list-width;
   td {
     padding: 0px;
     box-sizing: border-box;
-  }
-  tr:nth-child(even) {
-    background-color: $background_gray;
-  }
-  .student-list {
-    table {
-      width: $student-list-width;
-      table-layout: fixed;
-    }
-    td,
-    th {
+    border-right: 1px solid;
+    border-color: $border-gray;
+    &:last-child {
       border-right: 0px;
     }
+  }
+  tr {
+    height: $row-height;
+    &:nth-child(even) {
+      background-color: $background_gray;
+    }
+  }
+  .student-list {
+    table,
     th {
       width: $student-list-width;
-      background-color: $table-header;
-      color: $charcoal;
     }
-    tr,
-    td {
-      display: block;
-      width: 100%;
+    tbody {
+      tr,
+      td {
+        display: block;
+        width: 100%;
+      }
     }
   }
   .content-view {
     thead,
     tbody {
       max-width: $content-view-width;
-    }
-    tr {
-      height: $row-height;
-    }
-    th,
-    td {
-      border-right: 1px solid;
-      border-color: $border-gray;
-      &:last-child {
-        border-right: 0px;
-      }
     }
   }
 }
